src/test/testData/kubernetes/KUBE003/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
    name: test
spec:
      hostNetwork: <error descr="Sharing the host namespace could lead to security issues.">true</error>
      hostPID: <error descr="Sharing the host namespace could lead to security issues.">true</error>
      hostIPC: <error descr="Sharing the host namespace could lead to security issues.">true</error>
      containers:
      - image: nginx:latest
        name: test